--- a/src/styles.css
+++ b/src/styles.css
@@ -97,6 +97,7 @@ body.sb-show-main #root,
     --memori-modal--width--md: 80%;
     --memori-error-color: #ff4d4f;
     --memori-warning-color: #faad14;
+    --memori-button-disabled-bg: #f9f9f9;
 
     font-family: var(--memori-font-family, 'Lexend Deca Variable', 'Lexend Deca', sans-serif);
     font-size: 16px;
